--- a/Year7-today.html
+++ b/Year7-today.html
@@ -141,10 +141,10 @@
               const schedule = [
                 { date: '2025-03-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBQEIvlzupS4Z6iPaaSJnDASU2FISQa7n5gA5JdS8tqEU' },
                 { date: '2025-03-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRiamg88AIqRod8V55G9EuYAdKx6PjHtYsX_JAZIYLZ2CY' },
-                { date: '2025-03-20', time: '06:59', url: 'https:M' },
-                { date: '2025-03-21', time: '06:59', url: 'https://1drE' },
-                { date: '2025-03-22', time: '06:59', url: 'https:/w' },
-                { date: '2025-03-23', time: '06:59', url: 'h0' },
+                { date: '2025-03-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSO-Cn5-RlXT4IjcwogWtBFAVk4G_KBUnMzatfEgB-PvuE' },
+                { date: '2025-03-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT8ME2xiAPiTaDPIaqIR_RfAe4xvL903pUw4knVohBVoNg' },
+                { date: '2025-03-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRlOb6Xydg7RJwXR1KZ-eY_AeP463lrn8hWYB8FsiMPDbQ' },
+                { date: '2025-03-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSQlLXEVWGUT7AIrfeKFaLwAad2OhSinxaIrsHPQ-BNFeE' },
                 { date: '2025-03-24', time: '06:59', url: 'N/A' },
                 { date: '2025-03-25', time: '06:59', url: 'N/A' },
                 { date: '2025-03-26', time: '06:59', url: 'N/A' },
