--- a/year8-today.html
+++ b/year8-today.html
@@ -140,11 +140,11 @@
             
               const schedule = [
                 { date: '2025-03-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTLMzcDA96-SL41YBKo58CqAQrZ4CO4PdZTWXNFBnvxsVQ' },
-                { date: '2025-03-19', time: '06:59', url: 'N/A' },
-                { date: '2025-03-20', time: '06:59', url: 'https:M' },
-                { date: '2025-03-21', time: '06:59', url: 'https://1drE' },
-                { date: '2025-03-22', time: '06:59', url: 'https:/w' },
-                { date: '2025-03-23', time: '06:59', url: 'h0' },
+                { date: '2025-03-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQf56etRgGHQ7UK1LuyU6n-AfxZtH1YLMcJmnTjI0xdwPA' },
+                { date: '2025-03-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-TZJosNgCRrlfxuzdAyQWAdcwAvSf-JX3C1Wh9PVQxo4' },
+                { date: '2025-03-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBjz38xbQ_S4sDxbTMWgP5AezN0MsZo1lf_-8oLxxPD84' },
+                { date: '2025-03-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSshcQfh-eeTaz-6XAyUdoaAQWpFLMVXZcQu-YpKUL-nIU' },
+                { date: '2025-03-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbIBZ1gsE7QKsIXXu2xhKcAQ4_FUYbdF1b-lzYy2-yILQ' },
                 { date: '2025-03-24', time: '06:59', url: 'N/A' },
                 { date: '2025-03-25', time: '06:59', url: 'N/A' },
                 { date: '2025-03-26', time: '06:59', url: 'N/A' },
