--- a/Year7-today.html
+++ b/Year7-today.html
@@ -147,8 +147,8 @@
                 { date: '2025-04-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR-z5P7z3LtS6ZvQUoItipJAfJ2sMTuGnVpl1KYpuDd3dk' },
                 { date: '2025-04-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRuuGisiLmcSZpz8jPadvyGAZSx9ujrKnM6kd33-oVaFyY' },
                 { date: '2025-04-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrDtSeGbnBSLLKLt7coOAlAYlOIWVk3oDU1BKCSdhmXfs' },
-                { date: '2025-04-04', time: '06:59', url: 'https://1drvA' },
-                { date: '2025-04-05', time: '06:59', url: 'httpsEo' }
+                { date: '2025-04-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaSOcKuHNmRbxvi7R82CMyAQHQLXg1S58WG5ujESCPxis' },
+                { date: '2025-04-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTU1d43zFuMTKT8xqCiEYZ5AWdZoKlNGQ6uLOqbRnfxGFI' }
               ];
       
               function updateIframeSrc() {
